Update package.json file with gulp related packages, add gulpfile.js file to configure gulp to watch the typescript files for changes and place the compiled javascript files in the dist directory

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/chai": "^4.0.2",
     "@types/mocha": "^2.2.41",
     "chai": "^4.1.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.1",
     "mocha": "^3.5.0",
     "ts-node": "^3.3.0",
     "typings": "^2.1.1"
